release: prepare OmaRag 1.0
